# launderer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  flake.nix  validation-26-03-30-18-39.csv  validation-26-03-30-19-04.csv  validation-26-03-30-19-06.csv  validation-26-03-30-19-07.csv  validation-26-03-30-19-16.csv  validation-26-03-30-19-20.csv  validation-26-03-30-19-53.csv
cmake/: extra-components.cmake  zig-config.cmake
components/adc/: CMakeLists.txt  adc.cpp  adc.h
components/lcd/: CMakeLists.txt  lcd.cpp  lcd.h
components/load_cell/: CMakeLists.txt  load_cell.cpp  load_cell.h
demo/: demo-day_26-04-27-1.csv  demo-day_26-04-27-2.csv
imports/: idf-sys.zig  idf.zig
main/: CMakeLists.txt  app.zig  idf_component.yml  launderer.cpp
main/peripherals/: AnalogIn.zig  DigitalPinIn.zig  DigitalPinOut.zig  Lcd.zig  LoadCell.zig  PwmOut.zig  pin_layout.zig
media/: MVP_Large-Load.mov  MVP_Medium-Load.mov  MVP_Safeguard.mov  MVP_Small-Load.mov
validation/: push.bat  validation-26-03-30-13-53.csv  validation-26-03-30-18-15.csv  validation-26-03-30-18-32.csv  validation.bat
validation/March-30/: README.md  validation-26-03-30-13-55.csv  validation-26-03-30-18-33.csv  validation-26-03-30-18-48.csv  validation-26-03-30-18-56.csv  validation-26-03-30-19-02.csv  validation-26-03-30-19-13.csv  validation-26-03-30-19-14.csv  validation-26-03-30-19-18.csv  validation-26-03-30.csv
verification/April-08/: README.md  verification-dirty-26-04-08-fail.csv  verification-dirty-26-04-08.csv  verification-nasty-26-04-08.csv  (+1 more)
(+30 files in other folders)
